# freighter

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.debian  Dockerfile.origin  README.md  rust-toolchain
.github/: base.yml
.github/workflows/: base.yml  ci.yaml  cloud-common-build.yml  do-common-build.yml
src/: cli.rs  config.default.toml  config.rs  download.rs  errors.rs  main.rs
src/cloud/: mod.rs  s3.rs
src/commands/: channel.rs  command_prelude.rs  crates.rs  mod.rs  pull.rs  rustup.rs  rustup_init.rs  server.rs  sync.rs
src/crates/: channel.rs  command_prelude.rs  config.default.toml  crates.rs  crates_file.rs  index.rs  mod.rs  pull.rs  revparse.rs  rustup.rs
src/git/: blob.rs  commit.rs  hash.rs  id.rs  mod.rs  sign.rs  tag.rs  tree.rs
src/git/idx/: mod.rs
src/git/midx/: mod.rs
src/git/object/: delta.rs  mod.rs  types.rs
src/git/pack/: cache.rs  decode.rs  encode.rs  mod.rs
src/git/pack/diff/: mod.rs
src/handler/: channel.rs  crates_file.rs  index.rs  mod.rs  rustup.rs
src/server/: file_server.rs  git_protocal.rs  git_protocol.rs  mod.rs  model.rs
src/utils/: mod.rs
