[package]
name = "freighter-registry"
version = "0.3.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/open-rust-Initiative/freighter"
repository = "https://github.com/open-rust-Initiative/freighter"
documentation = ""
description = "The Freighter's purpose is to help the community and company to build the proxy for crates.io and the registry for the development environment."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
thiserror = "1.0.36"
clap = "4.3.4"
git2 = "0.18.1"
git2-curl = "0.19"
url = "2.3.1"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
walkdir = "2.3.2"
reqwest = { version = "0.11.13", features = ["blocking"] }
openssl = { version = "0.10.54", features = ["vendored"] }
chrono = "0.4.26"
sha2 = "0.10.7"
dirs = "5.0.0"
toml = "0.8.8"
log4rs = {version = "1.2.0", features = ["toml_format"] }
tokio = { version = "1.28.2", features = ["full"] }
warp = { version = "0.3.3", features = ["tls"] }
tokio-util = { version = "0.7.4", features = ["codec"] }
tracing = "0.1"
tracing-subscriber = "0.3.17"
bytes = "1.1.0"
async-trait = "0.1.64"
tokio-test = "0.4.2"
rayon = "1.7.0"


[dev-dependencies]


[build-dependencies]
