[package]
name = "freighter-registry"
version = "0.4.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/open-rust-Initiative/freighter"
repository = "https://github.com/open-rust-Initiative/freighter"
description = "The Freighter's purpose is to help the community and company to build the proxy for crates.io and the registry for the development environment."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
thiserror = "1.0.56"
clap = {version = "4.4.13", features = ["cargo"]}
git2 = "0.18.1"
git2-curl = "0.19"
url = "2.5.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
walkdir = "2.4.0"
reqwest = { version = "0.11.13", features = ["blocking"] }
openssl = { version = "0.10.62", features = ["vendored"] }
chrono = "0.4.31"
sha2 = "0.10.8"
dirs = "5.0.1"
toml = "0.8.8"
log4rs = {version = "1.2.0", features = ["toml_format"] }
tokio = { version = "1.35.1", features = ["macros", "process"] }
warp = { version = "0.3.6", features = ["tls"] }
tokio-util = { version = "0.7.10", features = ["codec"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
bytes = "1.5.0"
async-trait = "0.1.77"
tokio-test = "0.4.3"
rayon = "1.8.0"


[dev-dependencies]


[build-dependencies]
